# sae-concept-eval

./: .gitignore  README.md  pyproject.toml
config/: base.yaml  paths.yaml  train_sae.yaml
config/dataset/: coco.yaml  cub.yaml
config/model/: clip.yaml  dinov2.yaml
config/sae/: batchtopk.yaml  frozen.yaml  jumprelu.yaml  matryoshka.yaml  random.yaml  topk.yaml
run_scripts/: run_classifier.sh  run_main_experiments.sh  run_probe_metrics.sh
src/: main.py
src/datamodule/: CUB_syn_dataset.py  coco_datamodule.py  coco_dataset.py  cub_datamodule.py  embedding_datamodule.py  hf_syn_datasets.py
src/datamodule/components/: base_lmdb_dataset.py
src/metrics/: calculate_bmp_metrics.py  calculate_fms.py  calculate_functional_sae_metrics.py  calculate_metrics_gt_concept.py  calculate_metrics_targeted_perturbation.py  calculate_metrics_targeted_perturbation_syn_cub_probe.py  calculate_omp.py  calculate_omp_metrics.py  calculate_omp_tapa.py  calculate_probe_metrics.py  cknna.py  metric_utils.py  monosemanticity_score.py
src/metrics/fms/: fml_helpers.py  tree_loader.py
src/metrics/gt_metrics/: metrics_gt_concept.py
src/metrics/probe_based/: linear_probe.py
src/models/: new_sae_lightning.py
src/models/sae/: loss.py
src/overcomplete/: __init__.py  base.py  metrics.py  models.py
src/overcomplete/optimization/: __init__.py  (+7 more)
src/scripts/: calculate_embeddings_for_images.py  classifier_for_synthetic_data_evaluation.py
src/utils/: data_utils.py  io_utils.py  model_load_utils.py  resolvers.py
src/visualization/: vis_topk_images_per_concept.py  vis_utils.py
(+38 files in other folders)
