[project]
name = "rs-concepts"
version = "0.1.0"
description = "Evaluating the Interpretability of Sparse Autoencoders with Concept Annotations"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "albumentations>=2.0.8",
    "captum>=0.8.0",
    "einops>=0.8.0",
    "geopandas>=1.1.0",
    "hf-xet>=1.1.0",
    "huggingface-hub>=1.0",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "lightning>=2.5.1.post0",
    "lmdb>=1.6.2",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.32.0",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.10",
    "pyitlib>=0.3.1",
    "pytorch-ignite>=0.5.3",
    "rasterio>=1.4.3",
    "rootutils>=1.0.7",
    "ruff>=0.12.7",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "strenum>=0.4.15",
    "timm>=1.0.15",
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "torchvision==0.21.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "wandb>=0.20.1",
    "xformers>=0.0.29.post3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
